--- a/css/index.css
+++ b/css/index.css
@@ -91,3 +91,11 @@ footer {
   color: #fff;
   border-radius: 5px;
 }
+.login-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: gray;
+  padding: 5px 20px;
+  color: #fff;
+}
